# Agentira

./: .gitignore  COOKING_GAME.md  Cargo.toml  Dockerfile  README.md  index.html
.cargo/: config.toml
.github/scripts/: discord-notify.sh
.github/workflows/: deploy.yml
docs/: development.md  index.html  index_ja.html
src/: cool_ui_system.rs  cute_agents.rs  main.rs  ui_effects.rs  ui_system.rs  voxel_girls.rs
